# jq

./: .gitignore  CMakeLists.txt  NEWS.md  README.md  jq.1.prebuilt
cmake/: GenerateBuiltinInc.cmake  GenerateConfigOptsInc.cmake  GenerateVersionH.cmake
docs/content/manual/dev/: manual.yml
src/: jv.h  jv_parse.c  main.c
tests/: shtest
